@@ -68,8 +68,8 @@ class Codebird
    */
   protected static $_endpoints = [
     'ads'          => [
-      'production' => 'https://ads-api.twitter.com/0/',
-      'sandbox'    => 'https://ads-api-sandbox.twitter.com/0/'
+      'production' => 'https://ads-api.twitter.com/1/',
+      'sandbox'    => 'https://ads-api-sandbox.twitter.com/1/'
     ],
     'media'        => 'https://upload.twitter.com/1.1/',
     'publish'      => 'https://publish.twitter.com/',
