@@ -270,7 +270,7 @@ class Detection_Test extends \PHPUnit_Framework_TestCase
       'ton/bucket/:bucket'
     );
     $this->assertEquals(
-      'https://ads-api.twitter.com/0/accounts/1234/campaigns',
+      'https://ads-api.twitter.com/1/accounts/1234/campaigns',
       $cb->call(
         '_getEndpoint',
         ['ads/accounts/1234/campaigns', 'ads/accounts/:account_id/campaigns']
@@ -278,7 +278,7 @@ class Detection_Test extends \PHPUnit_Framework_TestCase
       'ads/accounts/:account_id/campaigns'
     );
     $this->assertEquals(
-      'https://ads-api-sandbox.twitter.com/0/accounts/1234/campaigns',
+      'https://ads-api-sandbox.twitter.com/1/accounts/1234/campaigns',
       $cb->call(
         '_getEndpoint',
         ['ads/sandbox/accounts/1234/campaigns', 'ads/sandbox/accounts/:account_id/campaigns']
