@@ -3,6 +3,7 @@ codebird-php - changelog
 
 3.2.0 (not yet released)
 + #161 Update oembed API method endpoint
++ Update to Twitter Ads API Version 1
 
 3.1.0 (2016-02-15)
 + #143 Add support for proxy types
